# aiwaf

./: .gitignore  AIWAF_SETTINGS_EXAMPLE.py  AIWAF_SETTINGS_GUIDE.py  CODE_OF_CONDUCT.md  Cargo.toml  INSTALLATION.md  MANIFEST.in  README.md  analyze_storage.py  analyze_wordpress_attack.py  check_rate_limiting_logic.py  debug_aiwaf.py  diagnose_burst_blocking.py  example_usage.py  log_analyzer.py  manage.py  monitor_headers.py  pyproject.toml  run_tests.py  settings_csv_example.py  settings_csv_example_fixed.py  setup.py  test_404_only_learning.py  test_aiwaf_reset.py  test_basic_import.py  test_conservative_path_validation.py  test_csv_simple.py  test_edge_case_fix_demo.py  test_exemption_simple.py  test_import_fix.py  test_improved_path_validation.py  test_include_path_edge_case.py  test_keyword_persistence.py  test_keyword_protection.py  test_live_web_app.py  test_method_validation.py  test_method_validation_simple.py  test_middleware_enhanced_validation.py  test_middleware_learning_fix.py  test_path_validation_flaw.py  (+3 more)
aiwaf/: __init__.py  apps.py  blacklist_manager.py  geoip.py  middleware.py  middleware_logger.py  model_store.py  models.py  rust_backend.py  settings_compat.py  storage.py  trainer.py  utils.py
aiwaf_rust/: Cargo.toml
scripts/: benchmark_rust_vs_python.py  stress_csv_logging.py
src/: lib.rs
tests/: __init__.py  base_test.py  conftest.py  convert_tests.py  run_stress_csv_logging.py  run_working_tests.py  test_404_only_learning_django.py  test_aiwaf_list_extended_info.py  test_aiwaf_reset_django.py  test_aiwaf_whois_command.py  test_basic_import_django.py  test_blacklist_extended_info_django.py  test_conservative_path_validation_django.py  test_csv_logging_and_trainer.py  test_csv_simple.py  test_csv_simple_django.py  test_django_rate_limiting.py  test_edge_case_fix_demo.py  test_edge_case_fix_demo_django.py  test_exemption_simple_django.py  test_extended_info_middleware_integration.py  test_geo_blocking.py  test_geo_traffic_summary.py  test_header_validation.py  test_header_validation_django.py  test_honeypot_authenticated_session_django.py  test_honeypot_enhancements.py  test_honeypot_enhancements_django.py  test_import_fix.py  test_import_fix_django.py  test_improved_path_validation_django.py  test_include_path_edge_case_django.py  (+55 more)
(+12 files in other folders)
