[package]
name = "aiwaf_rust"
version = "0.1.0"
edition = "2021"
include = [
    "src/**",
    "aiwaf/**",
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "Cargo.lock",
]

[lib]
name = "aiwaf_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
regex = "1"
once_cell = "1"
