[project]
name = "aiwaf"
version = "0.1.9.5.7"
description = "AI-powered Web Application Firewall"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Aayush Gauba", email = "gauba.aayush@gmail.com" }]
dependencies = [
    "Django>=3.2",
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0,<2.0",
    "joblib>=1.1",
    "geoip2>=4.0",
    "packaging>=21.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
learning = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0,<2.0",
    "joblib>=1.1"
]
geoblock = [
    "geoip2>=4.0"
]
light = []

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "."
module-name = "aiwaf_rust"
python-packages = ["aiwaf"]
include = ["LICENSE", "README.md", "aiwaf/**", "src/**"]
sdist-include = ["LICENSE", "README.md", "aiwaf/**", "src/**", "Cargo.toml", "Cargo.lock"]
exclude = ["venv/**", ".venv/**"]
